--- a/web/docs/03-recettes/spring-01-base.mdx
+++ b/web/docs/03-recettes/spring-01-base.mdx
@@ -8,8 +8,7 @@ hide_table_of_contents: true
 
 Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/serveur1-simple/).
 
-<Tabs queryString="recette-spring-base">
-  <TabItem value="Spring-Initializr" label="Spring Initializr">
+## Spring Initializr
 
     https://start.spring.io
 
@@ -27,8 +26,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
     En cliquant sur "Generate", tu vas télécharger un fichier zip qui contient ton projet.
 
-  </TabItem>
-  <TabItem value="ide" label="Ouvrir le projet dans un IDE">
+  ## Ouvrir le projet dans un IDE
 
     Un fois décompressé, tu as un projet Gradle:
     1. repère le fichier `build.gradle.kts`
@@ -42,8 +40,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
 
 
-  </TabItem>
-  <TabItem value="PartirProjet" label="Partir le projet">
+## PartirProjet
 
     Pour partir le projet, tu as plusieurs options:
     - tu peux cliquer sur le bouton ▶ vert que tu trouveras dans la classe DemoApplication
@@ -51,12 +48,8 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
     Le serveur une fois démarré est accessible sur http://localhost:8080
 
-  </TabItem>
-  <TabItem value="PremierePage" label="Voir ma première page">
+## Voir ma première page
 
     Le serveur une fois démarré est accessible sur http://localhost:8080
 
     Notre serveur actuel ne contient aucun code. Reporte-toi à la recette suivante pour ajouter un contrôleur.
-
-  </TabItem>
-</Tabs>
