--- a/web/docs/03-recettes/spring-03-post-service-jpa.mdx
+++ b/web/docs/03-recettes/spring-03-post-service-jpa.mdx
@@ -132,7 +132,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
 
                   </Column>
                   <Column>
-                  
+                  Le contenu du fichier src/test/resources/application-test.properties est le suivant :
                   <GHCode
                                         repo="4N6-Mobile"
                                         filePath="code/serveur3-service-bd-test/src/test/resources/application-test.properties"
