Description sur une image NVDA

--- a/web/docs/03-recettes/retrofit-02-objet.mdx
+++ b/web/docs/03-recettes/retrofit-02-objet.mdx
@@ -43,7 +43,7 @@ Nous allons voir comment faire un appel à notre fonction depuis un écran:
 
     Il est important de placer 3 points d'arrêt pour ton débogage:
 
-    ![Retrofit 2](retrofit-2.png)
+    ![un point d'arrêt sur le call.enqueue, un point d'arrêt sur la première ligne du onResponse, un point d'arrêt sur la première ligne du onFailure](retrofit-2.png)
 
 
     Il est aussi important d'utiliser le Network Inspector pour voir les appels réseaux:
