--- a/web/docs/03-recettes/retrofit-03-liste.mdx
+++ b/web/docs/03-recettes/retrofit-03-liste.mdx
@@ -12,14 +12,11 @@ ATTENTION : L'outil principal de débogage pour les appels réseaux est le netwo
 4. Tu devrais voir apparaître les appels réseaux de ton application
 :::
 
-Regarder la recette de base pour les étapes:
-- [AndroidManifest.xml](retrofit-01-base?recette-string=AndroidManifest.xml)
-- [build.gradle](retrofit-01-base?recette-string=build.gradle)
+Regarder la [recette de base](retrofit-01-base) pour les étapes:
+- AndroidManifest.xml
+- build.gradle.kts
 
-Dans cette recette, nous allons voir comment :
-
-- Récupérer une liste d'objets complexes depuis un service web.
-- TODO
+Dans cette recette, nous allons voir comment récupérer une liste d'objets complexes depuis un service web.
 
 Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/ComposeRetrofitObjets).
 
@@ -82,8 +79,8 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
         <GHCode
             repo="4N6-Mobile"
             filePath="code/ComposeRetrofitObjets/app/src/main/java/ca/cem/composeretrofitbase/MainActivity.kt"
-            startLine="64"
-            endLine="76"
+            startLine="42"
+            endLine="54"
         />
 
         Pour afficher la liste, on utilise une LazyColumn avec des Cards:
@@ -91,8 +88,8 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
         <GHCode
             repo="4N6-Mobile"
             filePath="code/ComposeRetrofitObjets/app/src/main/java/ca/cem/composeretrofitbase/MainActivity.kt"
-            startLine="84"
-            endLine="106"
+            startLine="98"
+            endLine="121"
         />
 
 ## Appel dans les tests
