--- a/web/docs/03-recettes/retrofit-02-objet.mdx
+++ b/web/docs/03-recettes/retrofit-02-objet.mdx
@@ -12,11 +12,11 @@ ATTENTION : L'outil principal de débogage pour les appels réseaux est le netwo
 4. Tu devrais voir apparaître les appels réseaux de ton application
 :::
 
-Regarder la recette de base pour les étapes:
-- [AndroidManifest.xml](retrofit-01-base?recette-string=AndroidManifest.xml)
-- [build.gradle](retrofit-01-base?recette-string=build.gradle)
-- [GitHubApi.kt](retrofit-01-base?recette-string=GitHubApi.kt)
-- [RetrofitInstance.kt](retrofit-01-base?recette-string=RetrofitInstance.kt)
+Regarder la [recette de base](retrofit-01-base) pour les étapes:
+- AndroidManifest.xml
+- build.gradle.kts
+- GitHubApi.kt
+- RetrofitInstance.kt
 
 Le code de cette recette est disponible [ici](https://github.com/departement-info-cem/4N6-Mobile/tree/main/code/ComposeRetrofitBase).
 
@@ -35,8 +35,8 @@ Nous allons voir comment faire un appel à notre fonction depuis un écran:
     <GHCode
             repo="4N6-Mobile"
             filePath="code/ComposeRetrofitBase/app/src/main/java/ca/cem/composeretrofitbase/MainActivity.kt"
-            startLine="64"
-            endLine="76"
+            startLine="65"
+            endLine="83"
           />
 
 ## debug
