--- a/web/docs/03-recettes/retrofit-04-cookie.mdx
+++ b/web/docs/03-recettes/retrofit-04-cookie.mdx
@@ -40,8 +40,10 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
         />
 
         Les points importants ici:
+        - Le **loggingInterceptor** permet de voir toutes les requêtes et réponses HTTP dans le logcat
+        - Le niveau **BODY** affiche les en-têtes ET le contenu complet des requêtes/réponses
         - on a ajouté un cookie jar (un pot à cookies) pour que le client HTTP puisse stocker les cookies d'un appel à l'autre
-        - on configure le client OkHttp avec le cookie jar
+        - on configure le client OkHttp avec le logging interceptor ET le cookie jar
         - on utilise à la fois ScalarsConverterFactory et GsonConverterFactory pour gérer différents types de réponses
 
 ## KickMyBApi.kt
@@ -78,8 +80,8 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
         <GHCode
           repo="4N6-Mobile"
           filePath="code/ComposeRetrofitPostEtCookies/app/src/main/java/ca/cem/composeretrofitbase/MainActivity.kt"
-          startLine="82"
-          endLine="159"
+          startLine="81"
+          endLine="171"
          />
 
         Points importants:
@@ -98,8 +100,7 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
         <GHCode
           repo="4N6-Mobile"
           filePath="code/ComposeRetrofitPostEtCookies/app/src/androidTest/java/ca/cem/composeretrofitbase/api/KickMyBApiInstrumentationTest.kt"
-          startLine="11"
-          endLine="68"
+
          />
 
         Ce qu'on observe ici :
