Une petite correction à l'énoncé du TP1

--- a/web/docs/02-tp/01-tp1.md
+++ b/web/docs/02-tp/01-tp1.md
@@ -80,7 +80,7 @@ L'écran d'accueil affiche la liste des tâches de l'utilisateur.
   - le pourcentage du temps écoulé entre la date de création et la date d'échéance
   - la date d'échéance
 
-Votre écran doit montrer une liste d'au moins 200 éléments codés en dur avec un nom et une date de votre choix.
+Votre écran doit montrer une liste d'au moins 200 éléments codés en dur avec un nom, une date et des pourcentages de votre choix.
 
 :::
 
