Othographe et terminologie

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -77,12 +77,12 @@ Tous les messages doivent être traduits pour les 2 langues.
 
 &#8203;<Highlight color="tip">4 points</Highlight>
 Vous devez modifier le serveur fourni pour permettre la suppression d'une tâche. Il faut :
-- Ajouter une route dans un **controleur**.
+- Ajouter une route dans un **contrôleur**.
 - Ajouter une méthode dans le **service** pour supprimer une tâche.
 - Utiliser le repository pour la suppression.
 
 &#8203;<Highlight color="tip">1 point</Highlight>
-Vous devez implanter le **contrôle d'accès** : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
+Vous devez implémenter le **contrôle d'accès** : vérifier que l'utilisateur est bien le propriétaire de la tâche avant de la supprimer.
 
 <!-- </Column>
 
@@ -110,11 +110,11 @@ Vous devez produire des tests unitaires pour la suppression d'une tâche au nive
 
 :::tip Suppression dans le client
 
-Vous pouvez choisir l'endroit dans l'interface où implanter la suppression (dans la liste, dans la consultation)
+Vous pouvez choisir l'endroit dans l'interface où implémenter la suppression (dans la liste, dans la consultation)
 ainsi que le moyen de déclencher la suppression (bouton, swipe, etc.).
 
 &#8203;<Highlight color="tip">2 points</Highlight> 
-La suppression est implantée dans l'interface graphique. L'interface se met à jour après la suppression.
+La suppression est implémentée dans l'interface graphique. L'interface se met à jour après la suppression.
 
 &#8203;<Highlight color="tip">1 point</Highlight>
 Vous devez afficher un message d'erreur approprié (et traduit) si la tâche à supprimer n'existe plus (par exemple elle a déjà été supprimée sur un autre appareil).
