--- a/web/docs/03-recettes/retrofit-04-cookie.mdx
+++ b/web/docs/03-recettes/retrofit-04-cookie.mdx
@@ -14,7 +14,7 @@ ATTENTION : L'outil principal de débogage pour les appels réseaux est le netwo
 
 Nous allons voir 2 éléments:
 - comment envoyer des données en POST avec une classe de transfert
-- comment implanter les cookies pour relier 2 appels ensemble
+- comment implémenter les cookies pour relier 2 appels ensemble
 
 
 Les cookies servent à relier plusieurs requêtes dans une session HTTP.
