--- a/web/docs/03-recettes/retrofit-01-base.mdx
+++ b/web/docs/03-recettes/retrofit-01-base.mdx
@@ -42,6 +42,23 @@ Le code de cette recette est disponible [ici](https://github.com/departement-inf
           endLine="59"
          />
 
+## libs.version.toml
+    
+    Il va falloir ajouter les versions de retrofit et okhttp que vous voulez utiliser dans la section [version] et les alias de dépendance dans la section [libraries].
+
+    <GHCode
+              repo="4N6-Mobile"
+              filePath="code/ComposeRetrofitBase/gradle/libs.versions.toml"
+              startLine="11"
+              endLine="12"
+              />
+    
+    <GHCode
+              repo="4N6-Mobile"
+              filePath="code/ComposeRetrofitBase/gradle/libs.versions.toml"
+              startLine="29"
+              endLine="32"
+              />
 
 
 ## GitHubApi.kt
