Déplacement déploiement au TP3

--- a/web/docs/02-tp/03-tp3.md
+++ b/web/docs/02-tp/03-tp3.md
@@ -31,6 +31,16 @@ Tous les messages d'erreur doivent être traduits pour les 2 langues.
 
 ::::
 
+
+:::info Déploiement du code serveur sur une instance cloud
+
+<Highlight color="tip">2 points</Highlight> Déployez le code du serveur sur une instance Render.
+Vous indiquerez l'URL de votre serveur dans un fichier **url-serveur.md** à la racine du projet.
+
+<Highlight color="tip">1 point</Highlight> Le projet remis pointe vers votre instance cloud (Render).
+
+:::
+
 </Column>
 
 <Column>
@@ -145,7 +155,7 @@ Notre serveur contient une faille de contrôle d'accès sur la mise à jour du p
 
 <Column>
 
-:::danger Fonctionnement global &#8203;<Highlight color="danger">5 points négatifs</Highlight>
+:::danger Fonctionnement global &#8203;<Highlight color="danger">6 points négatifs</Highlight>
 
 L'application fonctionne sans plantage et correctement. Ce pointage fonctionne en négatif. Si l'application fonctionne correctement en tout temps, vous conservez votre note. Dans le cas contraire, vous perdez des points avec un maximum de 5.
 
